# advisorygraphen

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  MANIFEST.md  README.ja.md  README.md
.github/workflows/: ci.yml
adrs/: 0001-rust-cli-first.md  0002-reviewable-completions.md  0003-append-only-case-log.md  0004-projection-loss-required.md  0005-public-private-boundary.md
crates/advisorygraphen-core/: Cargo.toml
crates/advisorygraphen-core/src/: higher.rs  lib.rs  validation.rs
crates/advisorygraphen-core/tests/: validation.rs
crates/advisorygraphen-interpretation/: Cargo.toml
crates/advisorygraphen-interpretation/src/: lib.rs
crates/advisorygraphen-lift/: Cargo.toml
crates/advisorygraphen-lift/src/: lib.rs
crates/advisorygraphen-projection/: Cargo.toml
crates/advisorygraphen-projection/src/: correspondence.rs  higher.rs  hypotheses.rs  lib.rs
crates/advisorygraphen-projection/tests/: precision_summary.rs
crates/advisorygraphen-reasoning/: Cargo.toml
crates/advisorygraphen-reasoning/src/: completions.rs  cycles.rs  higher.rs  hypothesis_lifecycle.rs  lib.rs  resolution.rs
crates/advisorygraphen-reasoning/src/hypotheses/: api_route.rs  boundary.rs  cycle.rs  evidence.rs  mod.rs  owner.rs  requirement.rs
crates/advisorygraphen-reasoning/tests/: hypotheses.rs  invariants.rs
crates/advisorygraphen-runtime/: Cargo.toml
crates/advisorygraphen-runtime/src/: case_review.rs  code_snapshot.rs  dogfood.rs  dry_run_gluing.rs  hypothesis_propagation.rs  hypothesis_review.rs  lib.rs  micro_review.rs  options.rs  projection_report.rs  review.rs
crates/advisorygraphen-runtime/tests/: hypothesis_propagation.rs
docs/: 00-product-charter.md  01-domain-model.md  02-rust-workspace.md  03-data-contracts.md  04-source-adapters.md  05-reasoning-invariants.md  06-completion-and-review-workflow.md  07-projections.md  08-cli-contract.md  09-agent-integration-and-skill.md  10-storage-case-log.md  11-security-governance.md  12-implementation-roadmap.md  13-testing-acceptance.md  14-todoist-projection.md  15-commercial-boundary.md  16-rust-api-sketches.md  19-hypothesis-dogfood-findings.md  99-source-alignment.md
docs/proposals/: hg-2026-argumentation-vocabulary.md  hg-2026-correspondence-overlap-adoption.md
examples/dogfood/agent-operations/: advisory.input.json
examples/dogfood/commercial-boundary/: advisory.input.json
examples/dogfood/higher-graphen-integration/: advisory.input.json
examples/dogfood/product-governance/: advisory.input.json
examples/dogfood/requirement-hypothesis-validation/: advisory.input.json
examples/evaluation/medium-hypothesis-proposal/: advisory.input.json
examples/evaluation/medium-pr-review/: advisory.input.json
examples/evaluation/micro-review/: micro-review.request.json
examples/product/expense-approval-system/: advisory.input.json
examples/product/expense-approval-system/docs/: 01-user-interview-notes.md  02-current-workflow-analysis.md  03-competitive-research.md  04-management-requirements.md
examples/technical-advisory/direct-db-access/: advisory.input.json  expected.check.report.json  expected.completion.report.json  expected.todoist.projection.json
schemas/advisorygraphen/: advisory.report.schema.json  advisory.space.schema.json  completion-dry-run-gluing-review.schema.json  engagement.snapshot.schema.json  micro-review.request.schema.json  projection.request.schema.json  review.event.schema.json  todoist.projection.schema.json
skills/advisorygraphen/: SKILL.md
skills/advisorygraphen-pr-review/: SKILL.md
skills/advisorygraphen-pr-review/agents/: openai.yaml
skills/advisorygraphen-pr-review/references/: pr-snapshot-modeling.md
skills/advisorygraphen/references/: hypothesis-diagnosis.md  projection.md  proposal-review.md  requirements-definition.md
tasks/: lessons.md
tests/advisorygraphen-cli-acceptance/: Cargo.toml
tests/advisorygraphen-cli-acceptance/tests/: cli_acceptance.rs  review_replay.rs  skill_contract.rs
tests/advisorygraphen-cli-acceptance/tests/support/: mod.rs
tools/advisorygraphen-cli/: Cargo.toml
tools/advisorygraphen-cli/src/: main.rs
