[workspace]
members = [
  "crates/advisorygraphen-core",
  "crates/advisorygraphen-interpretation",
  "crates/advisorygraphen-lift",
  "crates/advisorygraphen-reasoning",
  "crates/advisorygraphen-projection",
  "crates/advisorygraphen-runtime",
  "tools/advisorygraphen-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/CAPHTECH/advisorygraphen"
version = "0.1.1"
description = "Evidence-backed technical advisory and proposal governance on HigherGraphen."

[workspace.dependencies]
advisorygraphen-core = { version = "0.1.1", path = "crates/advisorygraphen-core" }
advisorygraphen-interpretation = { version = "0.1.1", path = "crates/advisorygraphen-interpretation" }
advisorygraphen-lift = { version = "0.1.1", path = "crates/advisorygraphen-lift" }
advisorygraphen-projection = { version = "0.1.1", path = "crates/advisorygraphen-projection" }
advisorygraphen-reasoning = { version = "0.1.1", path = "crates/advisorygraphen-reasoning" }
advisorygraphen-runtime = { version = "0.1.1", path = "crates/advisorygraphen-runtime" }
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
higher-graphen-core = { version = "0.4.1", path = "../higher-graphen/crates/higher-graphen-core" }
higher-graphen-evidence = { version = "0.4.1", path = "../higher-graphen/crates/higher-graphen-evidence" }
higher-graphen-interpretation = { version = "0.4.1", path = "../higher-graphen/crates/higher-graphen-interpretation" }
higher-graphen-projection = { version = "0.4.1", path = "../higher-graphen/crates/higher-graphen-projection" }
higher-graphen-reasoning = { version = "0.4.1", path = "../higher-graphen/crates/higher-graphen-reasoning" }
higher-graphen-structure = { version = "0.4.1", path = "../higher-graphen/crates/higher-graphen-structure" }
indexmap = { version = "2", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "1"
