[package]
name = "advisorygraphen-interpretation"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
advisorygraphen-core.workspace = true
higher-graphen-core.workspace = true
higher-graphen-interpretation.workspace = true
serde_json.workspace = true
