[package]
name = "advisorygraphen-lift"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
advisorygraphen-core.workspace = true
advisorygraphen-interpretation.workspace = true
higher-graphen-core.workspace = true
higher-graphen-structure.workspace = true
indexmap.workspace = true
serde_json.workspace = true
