[package]
name = "advisorygraphen-projection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
advisorygraphen-core = { path = "../advisorygraphen-core" }
advisorygraphen-reasoning = { path = "../advisorygraphen-reasoning" }
higher-graphen-core.workspace = true
higher-graphen-projection.workspace = true
serde_json.workspace = true
