[package]
name = "advisorygraphen-projection"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
advisorygraphen-core.workspace = true
advisorygraphen-reasoning.workspace = true
higher-graphen-core.workspace = true
higher-graphen-projection.workspace = true
serde_json.workspace = true
