[package]
name = "advisorygraphen-reasoning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
advisorygraphen-core = { path = "../advisorygraphen-core" }
advisorygraphen-interpretation = { path = "../advisorygraphen-interpretation" }
higher-graphen-core.workspace = true
higher-graphen-structure.workspace = true
serde_json.workspace = true
