[package]
name = "advisorygraphen-reasoning"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
advisorygraphen-core.workspace = true
advisorygraphen-interpretation.workspace = true
higher-graphen-core.workspace = true
higher-graphen-evidence.workspace = true
higher-graphen-reasoning.workspace = true
higher-graphen-structure.workspace = true
serde_json.workspace = true
