[package]
name = "advisorygraphen-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
advisorygraphen-core.workspace = true
advisorygraphen-interpretation.workspace = true
advisorygraphen-lift.workspace = true
advisorygraphen-projection.workspace = true
advisorygraphen-reasoning.workspace = true
chrono.workspace = true
higher-graphen-core.workspace = true
higher-graphen-reasoning.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
