[package]
name = "advisorygraphen-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "advisorygraphen"
path = "src/main.rs"

[dependencies]
advisorygraphen-core.workspace = true
advisorygraphen-projection.workspace = true
advisorygraphen-runtime.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
